--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI tool to rename mongodb databases with one command",
   "main": "app.js",
   "scripts": {
-    "test": "test/test.js"
+    "test": "echo 'no tests yet'"
   },
   "bin": {
     "rename-mongodb-database": "./bin/rename-mongodb-database"
