--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rename-mongodb-database",
+  "name": "@apostrophecms/rename-mongodb-database",
   "version": "1.0.0",
   "description": "CLI tool to rename mongodb databases with one command",
   "main": "app.js",
